# grapesy-etcd

./: README.md  cabal.project  flake.nix  treefmt.toml  weeder.toml
.github/workflows/: ci-nix.yaml
etcd-embed/: CHANGELOG.md  README.md  etcd-embed.cabal
etcd-embed/src/Etcd/: Embed.hs
grapesy-etcd/: CHANGELOG.md  grapesy-etcd.cabal
grapesy-etcd-testing/: CHANGELOG.md  README.md  grapesy-etcd-testing.cabal
grapesy-etcd-testing/src/: Alice.hs  Bob.hs  Main.hs
grapesy-etcd/app/: Client.hs
grapesy-etcd/src/Network/GRPC/: Etcd.hs
grapesy-etcd/src/Network/GRPC/Etcd/Client/: Simple.hs
grapesy-etcd/src/Proto/API/: Etcd.hs
nix/: coding-standards.nix  configuration.nix  outputs.nix  packages.nix  peer.crt  peer.key  project.nix  proto-files.nix  shell.nix  test-system.nix
nix/test/: peer.csr
proto-lens-etcd/: CHANGELOG.md  README.md  proto-lens-etcd.cabal
proto-lens-etcd/proto/etcd/api/etcdserverpb/: .rpc.proto.swo
proto-lens-etcd/src/Proto/API/: Etcd.hs
which-embed/: CHANGELOG.md  README.md  which-embed.cabal
which-embed/src/Data/: WhichEmbed.hs
