cabal-version:      2.2
name:               grapesy-etcd-testing
version:            0.1.0
synopsis:           grapesy-etcd-testing - Tests for grapesy-etcd
author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.14 && <5
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

executable tests
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:
    , grapesy
    , grapesy-etcd
