cabal-version:      2.2
name:               grapesy-etcd-testing
version:            0.2.0
synopsis:           grapesy-etcd-testing - Tests for grapesy-etcd
author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:
    , base   >=4.14 && <5
    , retry

  default-language:   GHC2021
  ghc-options:        -Wall -Wmissing-import-lists
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

executable alice
  import:         lang
  main-is:        Alice.hs
  hs-source-dirs: src
  build-depends:
    , bytestring
    , grapesy
    , grapesy-etcd

executable bob
  import:         lang
  main-is:        Bob.hs
  hs-source-dirs: src
  build-depends:
    , grapesy
    , grapesy-etcd
