cabal-version:      2.2
name:               grapesy-etcd
version:            0.3.0
synopsis:           grapesy-etcd - GRPC interface to etcd
author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.14 && <5
  default-language:   GHC2021
  ghc-options:        -Wall -Wmissing-import-lists
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

library
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , exceptions       >=0.10 && <0.11
    , grapesy          >=1.0  && <1.1
    , proto-lens-etcd  >=0.1  && <0.3

  exposed-modules:
    Network.GRPC.Etcd
    Network.GRPC.Etcd.Client.Simple
