cabal-version:      2.2
name:               which-embed
version:            0.1.0
synopsis:           which-embed
author:             IOG
copyright:          2025 IOG
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

extra-source-files:
  CHANGELOG.md
  README.md

common lang
  build-depends:      base >=4.14 && <5
  default-language:   GHC2021
  ghc-options:        -Wall -Wmissing-import-lists
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedLabels
    OverloadedStrings
    TypeFamilies

library
  import:          lang
  exposed-modules: Data.WhichEmbed
  hs-source-dirs:  src
  build-depends:
    , bytestring
    , directory
    , exceptions
    , file-embed
    , path
    , path-io
    , template-haskell
    , unix
    , which
